package ucf.assignments;

/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Bao Kastan
 */

import javafx.event.ActionEvent;

import java.awt.*;

public class ListAppController {
    public void search(ActionEvent actionEvent) {
    }

    public void dueDateButtonClicked(ActionEvent actionEvent) {
    }

    public void nameButtonClicked(ActionEvent actionEvent) {
    }

    public void incompletedButtonClicked(ActionEvent actionEvent) {
    }

    public void completedButtonClicked(ActionEvent actionEvent) {
    }

    public void createNewListButtonClicked(ActionEvent actionEvent) {
    }

    public void deleteListButtonClicked(ActionEvent actionEvent) {
    }

    public void openListButtonClicked(ActionEvent actionEvent) {
    }
}
