package ucf.assignments;

/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Bao Kastan
 */

import javafx.event.ActionEvent;

public class ListController {
    public void search(ActionEvent actionEvent) {
    }

    public void dueDateButtonClicked(ActionEvent actionEvent) {
    }

    public void nameButtonClicked(ActionEvent actionEvent) {
    }

    public void incompletedButtonClicked(ActionEvent actionEvent) {
    }

    public void completedButtonClicked(ActionEvent actionEvent) {
    }

    public void nameOfListChanged(ActionEvent actionEvent) {
    }

    public void createNewItemButtonClicked(ActionEvent actionEvent) {
    }

    public void deleteItemButtonClicked(ActionEvent actionEvent) {
    }

    public void dueDatePicked(ActionEvent actionEvent) {
    }

    public void openItemButtonClicked(ActionEvent actionEvent) {
    }

    public void backButtonClicked(ActionEvent actionEvent) {
    }
}
